--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.12",
     "co": "^4.6.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
